--- a/src/app/core/components/recipemodal/recipemodal.component.scss
+++ b/src/app/core/components/recipemodal/recipemodal.component.scss
@@ -1,166 +1,170 @@
 .image-wrap {
-    margin: 20px 20px 0;
-    border-radius: 8px 8px 0px 0px;
-    overflow: hidden;
-    height: 225px;
+  margin: 20px 20px 0;
+  border-radius: 8px 8px 0px 0px;
+  overflow: hidden;
+  height: 225px;
 
-    img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-    }
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
 
-    .butt-close {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        width: 26px;
-        height: 26px;
-        margin: 9px;
-    }
+  .butt-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 26px;
+    height: 26px;
+    margin: 9px;
+  }
 }
 
 .details-wrapper {
-    padding: 22px 17px 0;
-    h1, p, .detail {
-        padding-left: 7px;
-        padding-right: 7px;
-    }
+  padding: 22px 17px 0;
+  h1,
+  p,
+  .detail {
+    padding-left: 7px;
+    padding-right: 7px;
+  }
 }
 
 .meal-details {
-    margin-top: 0px;
-    margin-bottom: 13px;
-    text-align: left;
+  margin-top: 0px;
+  margin-bottom: 13px;
+  text-align: left;
 
-    h1 {
-        font-size: 24px;
-        line-height: 28px;
-        padding-bottom: 13px;
+  h1 {
+    font-size: 24px;
+    line-height: 28px;
+    padding-bottom: 13px;
 
-        font-size: 24px;
-        line-height: 28px;
-        color: var(--ion-color-font-main);
-        font-family: var(--font-family-body);
-        font-weight: var(--font-weight-body);
-        font-style: var(--font-style-body);
+    font-size: 24px;
+    line-height: 28px;
+    color: var(--ion-color-font-main);
+    font-family: var(--font-family-body);
+    font-weight: var(--font-weight-body);
+    font-style: var(--font-style-body);
+  }
+
+  p {
+    padding-bottom: 13px;
+    margin: 0;
+
+    font-size: 18px;
+    line-height: 23px;
+    color: var(--ion-color-font-main);
+    font-family: var(--font-family-body);
+    font-weight: var(--font-weight-body);
+    font-style: var(--font-style-body);
+  }
+
+  h2 {
+    margin: 9px 0;
+
+    font-size: 18px;
+    line-height: 23px;
+    color: var(--ion-color-font-main);
+    font-family: var(--font-family-meal-subheading);
+    font-weight: var(--font-weight-meal-subheading);
+    font-style: var(--font-style-meal-subheading);
+  }
+
+  .review {
+    text-align: center;
+
+    ion-button {
+      width: 240px;
+      margin-bottom: 80px;
+    }
+  }
+
+  &.details-box {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .detail {
+    display: inline-block;
+    height: 23px;
+    margin-right: 15px;
+
+    .icon {
+      width: 23px;
+      height: 23px;
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 5px;
+
+      &.ingredients {
+        background: url(../../../../assets/images/icon-ingredients.svg) center center no-repeat;
+        background-size: 90%;
+      }
+
+      &.cooktime {
+        background: url(../../../../assets/images/icon-cooktime.svg) center center no-repeat;
+        background-size: contain;
+      }
     }
 
-    p {
-        padding-bottom: 13px;
-        margin: 0;
+    .text {
+      vertical-align: bottom;
+      color: var(--ion-color-font-main);
+      font-family: var(--font-family-body);
+      font-weight: var(--font-weight-body);
+      font-style: var(--font-style-body);
+      font-size: 13px;
+      line-height: 17px;
+    }
+  }
 
-        font-size: 18px;
-        line-height: 23px;
-        color: var(--ion-color-font-main);
-        font-family: var(--font-family-body);
-        font-weight: var(--font-weight-body);
-        font-style: var(--font-style-body);
+  .ingredient-item,
+  .method-steps {
+    .text {
+      display: block;
+      vertical-align: bottom;
+      color: var(--ion-color-font-main);
+      font-family: var(--font-family-body);
+      font-weight: var(--font-weight-body);
+      font-style: var(--font-style-body);
+      font-size: 14px;
+      line-height: 20px;
+
+      &::first-letter {
+        text-transform: capitalize;
+      }
+    }
+  }
+
+  .method-steps {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 15px;
+
+    .list-node {
+      padding-right: 15px;
+
+      color: var(--ion-color-list-node);
+      font-family: var(--font-family-body);
+      font-weight: var(--font-weight-body);
+      font-style: var(--font-style-body);
+      font-size: 36px;
+      line-height: 50px;
     }
 
-    h2 {
-        margin: 9px 0;
-
-        font-size: 18px;
-        line-height: 23px;
-        color: var(--ion-color-font-main);
-        font-family: var(--font-family-meal-subheading);
-        font-weight: var(--font-weight-meal-subheading);
-        font-style: var(--font-style-meal-subheading);
+    .list-content {
+      align-self: center;
+      p {
+        padding: 8px 0 0;
+      }
     }
-
-    .review {
-        text-align: center;
-
-        ion-button {
-            width: 240px;
-            margin-bottom: 80px;
-        }
-    }
-
-    &.details-box {
-        padding-right: 0;
-        padding-left: 0;
-    }
-    .detail {
-        display: inline-block;
-        height: 23px;
-        margin-right: 15px;
-
-        .icon {
-            width: 23px;
-            height: 23px;
-            display: inline-block;
-            vertical-align: middle;
-            margin-right: 5px;
-
-            &.ingredients {
-                background: url(../../../../assets/images/icon-ingredients.svg) center center no-repeat;
-                background-size: 90%;
-            }
-
-            &.cooktime {
-                background: url(../../../../assets/images/icon-cooktime.svg) center center no-repeat;
-                background-size: contain;
-            }
-
-
-        }
-
-        .text {
-            vertical-align: bottom;
-            color: var(--ion-color-font-main);
-            font-family: var(--font-family-body);
-            font-weight: var(--font-weight-body);
-            font-style: var(--font-style-body);
-            font-size: 13px;
-            line-height: 17px;
-        }
-
-    }
-
-
-    .ingredient-item, .method-steps {
-        .text {
-            vertical-align: bottom;
-            color: var(--ion-color-font-main);
-            font-family: var(--font-family-body);
-            font-weight: var(--font-weight-body);
-            font-style: var(--font-style-body);
-            font-size: 14px;
-            line-height: 20px;
-        }
-    }
-
-    .method-steps {
-        display: flex;
-        flex-direction: row;
-        padding-bottom: 15px;
-        
-        .list-node {
-            padding-right: 15px;
-
-            color: var(--ion-color-list-node);
-            font-family: var(--font-family-body);
-            font-weight: var(--font-weight-body);
-            font-style: var(--font-style-body);
-            font-size: 36px;
-            line-height: 50px;
-        }
-
-        .list-content {
-            align-self: center;
-            p {
-                padding: 8px 0 0;
-            }
-        }
-    }
+  }
 }
 
 .details-box {
-    border-bottom: 1px solid var(--ion-color-section-border);
-    margin-bottom: 13px;
-    padding-bottom: 13px;
-    padding-left: 7px;
-    padding-right: 7px;
+  border-bottom: 1px solid var(--ion-color-section-border);
+  margin-bottom: 13px;
+  padding-bottom: 13px;
+  padding-left: 7px;
+  padding-right: 7px;
 }
