--- a/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
+++ b/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
@@ -1,24 +1,12 @@
 <ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar>
-
-	</ion-toolbar>
+  <ion-toolbar> </ion-toolbar>
 </ion-header>
 <ion-content fullscreen no-bounce has-bouncing="false" forceOverscroll="false">
-
   <div class="content-wrapper column start">
-
-      <div class="progress">
-        <onboarding-progress [showOverall]="false"></onboarding-progress>
-        <p class="progress-percentage">On Boarding is Complete!</p>
-      </div>
-
-      <div class="content column start content-prompt">
-          <ion-img [src]="imgSrc" class="shake animated infinite complete-image ion-align-self-center"></ion-img>
-          <h1>Please wait</h1>
-          <p>We are creating a personalised meal plan for you now!</p>
-      </div>
-
-
+    <div class="content column start content-prompt">
+      <ion-img [src]="imgSrc" class="shake animated infinite complete-image ion-align-self-center"></ion-img>
+      <h1>Please wait</h1>
+      <p>We are creating a personalised meal plan for you now!</p>
+    </div>
   </div>
-
 </ion-content>
