--- a/src/app/views/onboarding/pages/onboarding-loadingscreen/onboarding-loadingscreen.component.html
+++ b/src/app/views/onboarding/pages/onboarding-loadingscreen/onboarding-loadingscreen.component.html
@@ -1,24 +1,17 @@
 <ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar>
-
-	</ion-toolbar>
+  <ion-toolbar> </ion-toolbar>
 </ion-header>
 <ion-content fullscreen no-bounce has-bouncing="false" forceOverscroll="false">
-
   <div class="content-wrapper column start">
+    <div class="progress">
+      <onboarding-progress [showOverall]="false"></onboarding-progress>
+      <p class="progress-percentage">Nearly complete</p>
+    </div>
 
-      <div class="progress">
-        <onboarding-progress [showOverall]="false"></onboarding-progress>
-        <p class="progress-percentage">Nearly complete</p>
-      </div>
-
-      <div class="content column start content-prompt">
-        <ion-img [src]="imgSrc" class="shake animated infinite complete-image ion-align-self-center"></ion-img>
-        <h1>Just a Second</h1>
-          <p>Our algorithms are coming up with a few more recipes for you to rate.</p>
-      </div>
-
-
+    <div class="content column start content-prompt">
+      <ion-img [src]="imgSrc" class="shake animated infinite complete-image ion-align-self-center"></ion-img>
+      <h1>Just a second</h1>
+      <p>Our algorithms are coming up with a few more recipes for you to rate.</p>
+    </div>
   </div>
-
 </ion-content>
